# medical-multiagents

./: .gitignore  RAPPORT_TECHNIQUE.md  README.md  main.py  pyproject.toml  restart_project.bat  restart_project.ps1  start_project.bat  start_project.ps1  test_graph.py  test_interrupt.py
backend/: create_db.py  langgraph.json  requirements.txt
backend/app/: api.py  graph.py  llm.py  pdf_generator.py  state.py
backend/app/database/: database.py  models.py
backend/app/nodes/: diagnostic_agent.py  physician_review.py  report_agent.py  supervisor.py
backend/app/tools/: care_tools.py  mcp_client.py  patient_tools.py
backend/tests/: test_workflow.py
frontend/: README.md  index.html
mcp_server/: server.py
