[project]
name = "medical-multiagents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "langchain>=1.3.0",
    "langchain-openai>=1.2.1",
    "langgraph>=1.2.0",
    "langgraph-cli[inmem]>=0.4.26",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "reportlab>=4.5.1",
    "sqlalchemy>=2.0.49",
    "typing-extensions>=4.15.0",
    "uvicorn>=0.47.0",
]
